fixed padding-top for call to action on tablet view

--- a/css/index.css
+++ b/css/index.css
@@ -343,7 +343,7 @@ header .logo {
 
 @media (max-width: 950px) {
   .top-content .call-to-action {
-    margin-top: 0;
+    margin-top: 10px;
   }
 }
 
